--- a/src/components/ArrowCard.astro
+++ b/src/components/ArrowCard.astro
@@ -7,6 +7,7 @@ type Props = {
   description: string
   icon?: string
   href: string
+  date?: Date
   externalInNewTab?: boolean
   class?: string
 }
@@ -16,6 +17,7 @@ const {
   description,
   icon,
   href,
+  date,
   externalInNewTab = true,
   class: className,
 } = Astro.props
@@ -23,7 +25,7 @@ const {
 
 <Link
   href={href || `/`}
-  class={`animate group relative flex flex-nowrap items-center rounded-lg border border-base-content/25 bg-transparent px-4 py-3 pr-10 text-base-content duration-200 ease-in-out hover:bg-neutral ${className}`}
+  class={`group relative flex flex-nowrap items-center rounded-lg border border-base-content/25 bg-transparent px-4 py-4 pr-10 shadow-md transition-all duration-200 hover:bg-neutral hover:shadow-lg ${className}`}
   underline={false}
   externalInNewTab={externalInNewTab}
 >
@@ -32,10 +34,24 @@ const {
 
   <!-- Title and description -->
   <div class='flex flex-1 flex-col truncate'>
-    <div class='font-semibold group-hover:text-primary'>
-      {title}
+    <div class='flex items-center gap-2'>
+      <span class='font-semibold group-hover:text-primary'>
+        {title}
+      </span>
+      {
+        date && (
+          <span class='text-sm opacity-75'>
+            •{' '}
+            {date.toLocaleDateString('en-US', {
+              month: 'short',
+              day: 'numeric',
+              year: 'numeric',
+            })}
+          </span>
+        )
+      }
     </div>
-    <div class='text-sm'>
+    <div class='truncate text-sm'>
       {description}
     </div>
   </div>
