--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -1,5 +1,4 @@
 ---
-import Container from '@/components/layout/Container.astro'
 import Link from '@/components/Link.astro'
 import { getNavItems } from '@/config'
 
@@ -8,7 +7,7 @@ const navItems = getNavItems()
 
 <header
   role='banner'
-  class='fixed inset-x-0 top-0 z-50 w-screen bg-base-100/80 py-4 backdrop-blur-sm'
+  class='fixed left-1/2 top-0 z-50 w-full max-w-[42rem] -translate-x-1/2 bg-base-100/80 px-5 py-4 backdrop-blur-sm'
   transition:persist
 >
   <a
@@ -18,7 +17,7 @@ const navItems = getNavItems()
     skip to main content
   </a>
 
-  <Container as='section'>
+  <section>
     <div class='flex items-center justify-between'>
       <Link
         href='/'
@@ -66,5 +65,5 @@ const navItems = getNavItems()
         </ul>
       </nav>
     </div>
-  </Container>
+  </section>
 </header>
