--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,6 +1,5 @@
 ---
 import ContentImage from '@/components/content/ContentImage.astro'
-import Container from '@/components/layout/Container.astro'
 import Subheader from '@/components/layout/Subheader.astro'
 import Link from '@/components/Link.astro'
 import PostStructuredData from '@/components/meta/PostStructuredData.astro'
@@ -34,7 +33,7 @@ const { Content } = await render(post)
   isContentPage={true}
 >
   <PostStructuredData slot='structured-data' entry={post} type='blog' />
-  <Container as='section'>
+  <section>
     <Subheader
       title={post.data.title}
       publishDate={post.data.publishDate}
@@ -65,5 +64,5 @@ const { Content } = await render(post)
         <Content components={{ a: Link, img: ContentImage }} />
       </div>
     </article>
-  </Container>
+  </section>
 </PageLayout>
