--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -1,5 +1,4 @@
 ---
-import Container from '@/components/layout/Container.astro'
 import Subheader from '@/components/layout/Subheader.astro'
 import Link from '@/components/Link.astro'
 import CollectionPageStructuredData from '@/components/meta/CollectionPageStructuredData.astro'
@@ -49,7 +48,7 @@ const bandcampAlbums = await getCollection('music')
   />
   <ProfilePageStructuredData slot='structured-data' />
 
-  <Container as='section'>
+  <section>
     <div class='animate mb-12'>
       <Subheader
         class='mb-12 space-y-12'
@@ -199,7 +198,7 @@ const bandcampAlbums = await getCollection('music')
               artists.map((artist: any) => (
                 <Link
                   href={artist.url}
-                  class='group flex h-[76px] w-full items-center gap-4 rounded-lg border border-base-content/25 bg-transparent p-3 transition-all duration-200 hover:bg-neutral'
+                  class='group flex h-[76px] w-full items-center gap-4 rounded-lg border border-base-content/25 bg-transparent p-3 shadow-md transition-all duration-200 hover:bg-neutral hover:shadow-lg'
                   underline={false}
                   externalInNewTab={true}
                 >
@@ -248,7 +247,7 @@ const bandcampAlbums = await getCollection('music')
               albums.map((album: any) => (
                 <Link
                   href={album.url}
-                  class='group flex h-[76px] w-full items-center gap-4 rounded-lg border border-base-content/25 bg-transparent p-3 transition-all duration-200 hover:bg-neutral'
+                  class='group flex h-[76px] w-full items-center gap-4 rounded-lg border border-base-content/25 bg-transparent p-3 shadow-md transition-all duration-200 hover:bg-neutral hover:shadow-lg'
                   underline={false}
                   externalInNewTab={true}
                 >
@@ -333,7 +332,7 @@ const bandcampAlbums = await getCollection('music')
 
       <div
         id='customView'
-        class='space-y-4 rounded-xl border border-base-content/25 p-4'
+        class='space-y-4 rounded-xl border border-base-content/25 p-4 shadow-md hover:shadow-lg'
       >
         {
           playlist && (
@@ -392,5 +391,5 @@ const bandcampAlbums = await getCollection('music')
         }
       </div>
     </section>
-  </Container>
+  </section>
 </PageLayout>
