--- a/src/components/meta/Head.astro
+++ b/src/components/meta/Head.astro
@@ -237,7 +237,7 @@ const canonicalUrl = getCanonicalUrl(Astro.url.pathname)
           path: './public/fonts/InterItalic.woff2',
         },
       ],
-      preload: true,
+      preload: false,
       display: 'swap',
       selector: 'body',
       fallback: 'sans-serif',
