--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -12,9 +12,10 @@ const navItems = getNavItems()
 >
   <a
     href='#main-content'
-    class='hover:text-accent-focus sr-only focus:not-sr-only focus:absolute focus:left-4 focus:top-4 focus:z-50 focus:rounded-lg focus:bg-neutral focus:px-4 focus:py-2 focus:text-base-content focus:outline-none focus:ring-2 focus:ring-base-content'
+    class='sr-only focus:not-sr-only focus:absolute focus:left-4 focus:top-4 focus:z-[100] focus:rounded-lg focus:bg-neutral focus:px-4 focus:py-2 focus:text-base-content focus:outline-none focus:ring-2 focus:ring-base-content'
+    tabindex='0'
   >
-    skip to main content
+    Skip to main content
   </a>
 
   <section>
