--- a/src/components/ArtCarousel.astro
+++ b/src/components/ArtCarousel.astro
@@ -38,16 +38,15 @@ const carouselDescription = 'Scroll horizontally to view more artwork'
     role='region'
     aria-label={carouselLabel}
     tabindex='0'
-    aria-roledescription='carousel'
   >
-    <ul class='flex w-full list-none gap-4'>
+    <div class='flex w-full gap-4'>
       {
         carouselItems.map(({ art, isMultiImage, imageCount }, index) => (
-          <li
+          <div
             class='carousel-item w-[calc(50%-0.5rem)] sm:w-[calc(33.333%-0.75rem)]'
-            role='group'
-            aria-roledescription='slide'
-            aria-label={`Artwork ${index + 1} of ${carouselItems.length}: ${art.data.title}`}
+            role='tabpanel'
+            aria-label={`${art.data.title}`}
+            tabindex='0'
           >
             <Link
               href={`/art/${art.id}`}
@@ -104,10 +103,10 @@ const carouselDescription = 'Scroll horizontally to view more artwork'
                 </div>
               </div>
             </Link>
-          </li>
+          </div>
         ))
       }
-    </ul>
+    </div>
   </div>
 
   {
