--- a/src/components/meta/Head.astro
+++ b/src/components/meta/Head.astro
@@ -210,7 +210,7 @@ const canonicalUrl = getCanonicalUrl(Astro.url.pathname)
         },
       ],
       preload: true,
-      display: 'block',
+      display: 'swap',
       selector: '.title',
       fallback: 'sans-serif',
     },
